--- a/Semana 10/Funciones.ipynb
+++ b/Semana 10/Funciones.ipynb
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,9 +96,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[0;31mSignature:\u001b[0m \u001b[0mmi_funcion1\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mparam1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mparam2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mDocstring:\u001b[0m\n",
+      "Esta función también imprime únicamente los valores de los parámetros\n",
+      "requiere de dos parámetros\n",
+      "Inputs:\n",
+      "param1: puede ser cualquier vaina\n",
+      "param2: también\n",
+      "\n",
+      "Outputs:\n",
+      "\u001b[0;31mFile:\u001b[0m      /var/folders/8f/ny9yjb4103j1_pxfylsh97cm0000gn/T/ipykernel_18824/4045698188.py\n",
+      "\u001b[0;31mType:\u001b[0m      function"
+     ]
+    }
+   ],
    "source": [
     "mi_funcion1?"
    ]
@@ -112,9 +130,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2\n"
+     ]
+    }
+   ],
    "source": [
     "mi_funcion1(1,2)"
    ]
