--- a/Semana 9/Diccionarios.ipynb
+++ b/Semana 9/Diccionarios.ipynb
@@ -129,9 +129,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'a': 'z', 'b': 'y', 'c': 'x', 'd': 'w'}\n"
+     ]
+    }
+   ],
    "source": [
     "dic = dict(zip('abcd',[\"z\",\"y\",\"x\",\"w\"]))\n",
     "print(dic)"
@@ -148,9 +156,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_items([('a', 1), ('b', 2), ('c', 3), ('d', 4)])\n"
+     ]
+    }
+   ],
    "source": [
     "dic =   {'a' : 1, 'b': 2, 'c' : 3 , 'd' : 4}\n",
     "items = dic.items()\n",
@@ -168,9 +184,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['a', 'b', 'c', 'd'])\n"
+     ]
+    }
+   ],
    "source": [
     "dic =  {'a' : 1, 'b' : 2, 'c' : 3 , 'd' : 4}\n",
     "keys= dic.keys()\n",
@@ -188,9 +212,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_values([1, 2, 3, 4])\n"
+     ]
+    }
+   ],
    "source": [
     "dic =  {'a' : 1, 'b' : 2, 'c' : 3 , 'd' : 4}\n",
     "values= dic.values()\n",
@@ -208,9 +240,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{}\n"
+     ]
+    }
+   ],
    "source": [
     "dic1 = {'a' : 1, 'b' : 2, 'c' : 3 , 'd' : 4}\n",
     "dic1.clear()\n",
@@ -228,9 +268,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'a': 1, 'b': 2, 'c': 3, 'd': 4}\n"
+     ]
+    }
+   ],
    "source": [
     "dic = {'a' : 1, 'b' : 2, 'c' : 3 , 'd' : 4}\n",
     "dic1 = dic.copy()\n",
@@ -248,11 +296,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'a': None, 'b': None, 'c': None, 'd': None}\n"
+     ]
+    }
+   ],
    "source": [
-    "dic = dict.fromkeys(['a','b','c','d'],1)\n",
+    "dic = dict.fromkeys(['a','b','c','d'])\n",
     "print(dic)"
    ]
   },
@@ -267,12 +323,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "2\n"
+     ]
+    }
+   ],
    "source": [
     "dic = {'a' : 1, 'b' : 2, 'c' : 3 , 'd' : 4}\n",
-    "valor = dic.get('z') \n",
+    "valor = dic.get('b') \n",
+    "print(dic['b'])\n",
     "print(valor)"
    ]
   },
@@ -287,9 +353,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "{'a': 1, 'b': 2, 'd': 4}\n"
+     ]
+    }
+   ],
    "source": [
     "dic = {'a' : 1, 'b' : 2, 'c' : 3 , 'd' : 4}\n",
     "valor = dic.pop('c')\n",
@@ -308,13 +383,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
    "source": [
     "dic = {'a' : 1, 'b' : 2, 'c' : 3 , 'd' : 4}\n",
     "valor = dic.setdefault('b')\n",
-    "print(valor)"
+    "\n",
+    "print(dic[\"b\"])"
    ]
   },
   {
@@ -326,12 +410,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'a': 1, 'b': 2, 'c': 3, 'd': 4, 'e': 5, 'hola': 50}\n",
+      "5\n"
+     ]
+    }
+   ],
    "source": [
     "dic = {'a' : 1, 'b' : 2, 'c' : 3 , 'd' : 4}\n",
     "valor = dic.setdefault('e',5)\n",
+    "dic[\"hola\"] = 50\n",
     "print(dic)\n",
     "print(valor)"
    ]
@@ -347,9 +441,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'c': 3, 'b': 2, 'e': 9, 'f': 10, 'a': 1, 'd': 4}\n"
+     ]
+    }
+   ],
    "source": [
     "dic1 = {'a' : 1, 'b' : 2, 'c' : 3 , 'd' : 4}\n",
     "dic2 = {'c' : 6, 'b' : 5, 'e' : 9 , 'f' : 10}\n",
@@ -799,7 +901,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.11.2"
   }
  },
  "nbformat": 4,
